# dubhe

./: .engines  .eslintcache  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc  API_README.md  CHANGELOG.md  CLAUDE.md  COMPLETION_REPORT.md  CONTENT_DEVELOPMENT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENGINEERING.md  FINAL_COMPLETION_REPORT.md  IMPROVEMENTS_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  SECURITY_FIX_PLAN.md  commitlint.config.js  docker-compose.yml  env.example  eslint.config.base.mjs  eslint.config.mjs  i18n-health-report.json  jest.config.js  jest.e2e.setup.js  jest.setup.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  skills-lock.json  tsconfig.base.json  tsconfig.json  turbo.json  (+1 more)
.changeset/: short-forks-wait.md
.cursor/: mcp.json
.github/: pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
crates/dubhe-common/: Cargo.toml
crates/dubhe-common/src/: events.rs  primitives.rs  proto_converter.rs  sql.rs  table.rs
crates/dubhe-common/src/db/: mod.rs  postgres.rs  sqlite.rs  traits.rs
crates/dubhe-indexer/: Cargo.toml  Dockerfile  INDEXER_INDEXING_LOGIC.md  config.example.toml  framework.config.json  local_reader_progress
crates/dubhe-indexer/src/: args.rs  config.rs  handlers.rs  main.rs  proxy.rs
docs/: COMPONENT_GUIDE.md  IMPROVEMENTS.md  NODE_ENVIRONMENT.md  README.md  dubhe-v2-design.md  next.config.mjs  package.json  pnpm-lock.yaml
e2e-tests/: dubhe-integration.test.ts  i18n-content-consistency.spec.ts  i18n-ui.spec.ts
(+531 files in other folders)
