[package]
name = "dubhe-common"
version = "1.2.0-pre.56"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
sui_types = { workspace = true }
anyhow = { workspace = true }
move-core-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
bcs = { workspace = true }
sqlx = { workspace = true }
prost-types = "0.12"


[dev-dependencies]
rand = "0.8.5"
