[package]
name = "dubhe-indexer"
version = "1.2.0-pre.118"
edition = "2021"

[dependencies]
serde_yaml = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
dubhe-common = { workspace = true }
dubhe-indexer-grpc = { path = "../dubhe-indexer-grpc" }
dubhe-indexer-graphql = { path = "../dubhe-indexer-graphql" }
tokio = { workspace = true }
sui_types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

# Web server dependencies
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
tonic = "0.10"
tonic-web = "0.10"
prost-types = "0.12"
sui-indexer-alt-framework = { workspace = true }


[dev-dependencies]
rand = "0.8.5"
